[GPU Process] http/tests/media/hls/hls-audio-tracks-locale-selection.html fails https://bugs.webkit.org/show_bug.cgi?id=223102 <rdar://problem/75338802>

Reviewed by Jer Noble.

Source/WebKit:

No new tests, these changes fix an existing test.

* GPUProcess/GPUConnectionToWebProcess.cpp:
(WebKit::GPUConnectionToWebProcess::GPUConnectionToWebProcess): Set user preferred
languages if parameters.overrideLanguages isn't empty.
(WebKit::GPUConnectionToWebProcess::setUserPreferredLanguages): Set user preferred
languages.
* GPUProcess/GPUConnectionToWebProcess.h:
* GPUProcess/GPUConnectionToWebProcess.messages.in:

* Shared/GPUProcessConnectionParameters.h: Add overrideLanguages.
(WebKit::GPUProcessConnectionParameters::encode const):
(WebKit::GPUProcessConnectionParameters::decode):

* WebProcess/GPU/GPUProcessConnection.cpp:
(WebKit::languagesChanged): Send new languages to GPU process.
(WebKit::GPUProcessConnection::GPUProcessConnection): Register for language changes.
(WebKit::GPUProcessConnection::~GPUProcessConnection): Unregister.

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeGPUProcessConnectionParameters):Add overrideLanguages.

LayoutTests:

* platform/wk2/TestExpectations: Unskip the passing test.


Canonical link: https://commits.webkit.org/235209@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274321 268f45cc-cd09-0410-ab3c-d52691b4dbfc