Source/WebKit/WebProcess/GPU/GPUProcessConnection.cpp
@@ -53,6 +53,7 @@
 #include "WebProcess.h"
 #include <WebCore/PlatformMediaSessionManager.h>
 #include <WebCore/SharedBuffer.h>
+#include <wtf/Language.h>
 
 #if ENABLE(ENCRYPTED_MEDIA)
 #include "RemoteCDMInstanceSessionMessages.h"
@@ -88,10 +89,17 @@
 namespace WebKit {
 using namespace WebCore;
 
+static void languagesChanged(void* context)
+{
+    static_cast<GPUProcessConnection*>(context)->connection().send(Messages::GPUConnectionToWebProcess::SetUserPreferredLanguages(userPreferredLanguages()), { });
+}
+
 GPUProcessConnection::GPUProcessConnection(IPC::Connection::Identifier connectionIdentifier)
     : m_connection(IPC::Connection::createClientConnection(connectionIdentifier, *this))
 {
     m_connection->open();
+
+    addLanguageChangeObserver(this, languagesChanged);
 }
 
 GPUProcessConnection::~GPUProcessConnection()
@@ -101,6 +109,7 @@ GPUProcessConnection::~GPUProcessConnection()
     if (m_audioSourceProviderManager)
         m_audioSourceProviderManager->stopListeningForIPC();
 #endif
+    removeLanguageChangeObserver(this);
 }
 
 void GPUProcessConnection::didClose(IPC::Connection&)
